snapshots/syntax/library/functions/math/log/log_iif.snap
---
source: src/syntax/library/functions/math/log.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: result
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: IIf
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: x
                        - kind: Whitespace
                          text: " "
                        - kind: GreaterThanOperator
                          text: ">"
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "0"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: Log
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: x
                        - kind: RightParenthesis
                          text: )
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "0"
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
